exports[`ButtonText overrides if signed in and override 1`] = `
<span>
  Give Later
</span>
`;

exports[`ButtonText says \`Give Now\` if signed in and no override 1`] = `
<span>
  Give Now
</span>
`;

exports[`ButtonText says \`Review Using 6789\` if signed in and has saved account 1`] = `
<span>
  Review Using 6789
</span>
`;

exports[`ButtonText says \`Sign In\` if not userId 1`] = `
<span>
  Sign In
</span>
`;

exports[`ButtonText still says \`Give Now\` if hideCard is true 1`] = `
<span>
  Give Now
</span>
`;

exports[`Icon does nothing if no saved payments 1`] = `null`;

exports[`Icon does nothing if saved payment and hideCard is true 1`] = `null`;

exports[`Icon renders AmEx if AmEx 1`] = `
<div
  className="background--fill display-inline-block gbhCzx"
  height="21px"
  width="30px" />
`;

exports[`Icon renders bank icon if paymentType ACH 1`] = `
<div
  className="background--fill display-inline-block kpeakM"
  height="21px"
  width="30px" />
`;

exports[`PrimaryButton has default styles when disabled but not logged in 1`] = `
<button
  className="btn"
  data-id={undefined}
  disabled={undefined}
  onClick={undefined}
  style={undefined}
  value={undefined}>
  <span>
    Sign In
  </span>
   
</button>
`;

exports[`PrimaryButton has disabled style when disabled and logged in 1`] = `
<button
  className="btn btn--disabled"
  data-id={undefined}
  disabled={true}
  onClick={undefined}
  style={undefined}
  value={undefined}>
  <span>
    Give Now
  </span>
   
</button>
`;

exports[`PrimaryButton has enabled styles when enabled 1`] = `
<button
  className="btn"
  data-id={undefined}
  disabled={undefined}
  onClick={undefined}
  style={undefined}
  value={undefined}>
  <span>
    Sign In
  </span>
   
</button>
`;

exports[`PrimaryButton overrides classes with theme if theme 1`] = `
<button
  className="my cool theme"
  data-id={undefined}
  disabled={undefined}
  onClick={undefined}
  style={undefined}
  value={undefined}>
  <span>
    Sign In
  </span>
   
</button>
`;

exports[`PrimaryButton passes a style object 1`] = `
<button
  className="btn"
  data-id={undefined}
  disabled={undefined}
  onClick={undefined}
  style={
    Object {
      "background": "red",
    }
  }
  value={undefined}>
  <span>
    Sign In
  </span>
   
</button>
`;

exports[`PrimaryButton passes a value 1`] = `
<button
  className="btn"
  data-id={undefined}
  disabled={undefined}
  onClick={undefined}
  style={undefined}
  value="test">
  <span>
    Sign In
  </span>
   
</button>
`;

exports[`PrimaryButton passes the onClick function 1`] = `
<button
  className="btn"
  data-id={undefined}
  disabled={undefined}
  onClick={[Function]}
  style={undefined}
  value={undefined}>
  <span>
    Sign In
  </span>
   
</button>
`;

exports[`PrimaryButton renders with minimum props 1`] = `
<button
  className="btn"
  data-id={undefined}
  disabled={undefined}
  onClick={undefined}
  style={undefined}
  value={undefined}>
  <span>
    Sign In
  </span>
   
</button>
`;

exports[`buttonClasses has additionalClasses if passed 1`] = `"btn additional class names"`;

exports[`buttonClasses has btn at least 1`] = `"btn"`;

exports[`buttonClasses has btn--disabled if disabled and userId 1`] = `"btn btn--disabled"`;

exports[`buttonClasses has has-card if saved payments 1`] = `"btn has-card"`;
